typo: fixing _id to id

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
         <ul>
             {% for college in colleges %}
             <li>
-                Id: {{ college['_id'] }}<br />
+                Id: {{ college['id'] }}<br />
                 School: {{ college['school_name'] }}<br />
                 Tuition (In-State): {{ college['tuition_in_state'] }}<br />
                 Tuition (Out-of-State): {{ college['tuition_out_of_state'] }}<br />
