normalization for tuitions, public/4yrs tag error fixed

--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -35,5 +35,5 @@
 }
 
 .sidenav button.active {
-    background-color: #4caf50; /* Change to the desired active color */
+    background-color: #4caf50;
 }
