--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -69,18 +69,29 @@
                 left: 0%;
                 top: 0%;
             }
-            
+            body {
+                margin: 0;
+                overflow: hidden;
+            }
     #sidebar {
         position: fixed;
         top: 0;
         left:0;
         width: 160px;
         height: 100vh;
-        background-color: #f5f5f5;
+        background-color: #242424;
         padding: 20px;
         bottom: 0%;
         box-sizing: border-box;
         float: left; /* Float the sidebar to the left */
+    }
+    #map-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
     }
     input[type="radio"] {
         margin-bottom: 10px;
@@ -89,6 +100,29 @@
         display: block;
         margin-bottom: 8px;
     }
+
+    h2{
+        color:#a3deff;
+        font-size: 14px;
+    }
+    h3{
+        color:#fffdb8;
+        font-size: 14px; 
+    }
+    h4{
+        color:#ffa7e2;
+        font-size: 14px;
+    }
+    #fstRadBtn{
+        color:#a3deff;   
+    }
+    #sndRadBtn{
+        color:#fffdb8; 
+    }
+    #thdRadBtn{
+        color:#ffa7e2;
+    }
+
 
             .folium-map {
                 flex: 1;
@@ -108,9 +142,11 @@
         <div class="folium-map" id="map_inner"></div>
 
         <div class="folium-map" id="map_inner"></div>
+        <div id="map-container">
+            <div class="folium-map" id="map_inner"></div>
   <div id="sidebar">
-  <h4>Degree Length</h4>
-  <form>
+  <h2>Degree Length</h2>
+  <form id="fstRadBtn">
       <label>
           <input type="radio" name="degree" id="4yrs"> 4-years
       </label>
@@ -121,8 +157,8 @@
           <input type="radio" name="degree" id="bothyrs"> both
       </label>
   </form>
-  <h4>School Type</h4>
-  <form>
+  <h3>School Type</h3>
+  <form id="sndRadBtn">
       <label>
           <input type="radio" name="type" id="public"> Public
       </label>
@@ -134,7 +170,7 @@
       </label>
   </form>
   <h4>Tuition Type</h4>
-  <form>
+  <form id="thdRadBtn">
       <label>
           <input type="radio" name="tuition" id="instate"> in-state
       </label>
@@ -143,7 +179,6 @@
       </label>
   </form>
 </div>
-
     </body>
 
     <script>
