--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,28 @@
                 right: 0;
                 left: 0;
             }
+              .legend {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                margin-top: 10px;
+                margin-left: 30px;
+                width: 5vw;
+                height: 40vh;
+                left: 50%;
+                padding: 5px;
+                background: linear-gradient(to top, green, yellow, orange, red, purple);
+                text-align: center;
+              }
+
+              .legend-item {
+                flex: 1;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              }
         </style>
 
         <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js"></script>
@@ -69,26 +91,26 @@
                 left: 0%;
                 top: 0%;
             }
-            
-    #sidebar {
-        position: fixed;
-        top: 0;
-        left:0;
-        width: 160px;
-        height: 100vh;
-        background-color: #f5f5f5;
-        padding: 20px;
-        bottom: 0%;
-        box-sizing: border-box;
-        float: left; /* Float the sidebar to the left */
-    }
-    input[type="radio"] {
-        margin-bottom: 10px;
-    }
-    label {
-        display: block;
-        margin-bottom: 8px;
-    }
+
+            #sidebar {
+                position: fixed;
+                top: 0;
+                left:0;
+                width: 160px;
+                height: 100vh;
+                background-color: #f5f5f5;
+                padding: 20px;
+                bottom: 0%;
+                box-sizing: border-box;
+                float: left; /* Float the sidebar to the left */
+            }
+            input[type="radio"] {
+                margin-bottom: 10px;
+            }
+            label {
+                display: block;
+                margin-bottom: 8px;
+            }
 
             .folium-map {
                 flex: 1;
@@ -107,44 +129,58 @@
     <body>
         <div class="folium-map" id="map_inner"></div>
 
-        <div class="folium-map" id="map_inner"></div>
-  <div id="sidebar">
-  <h4>Degree Length</h4>
-  <form>
-      <label>
-          <input type="radio" name="degree" id="4yrs"> 4-years
-      </label>
-      <label>
-          <input type="radio" name="degree" id="2yrs"> 2-years
-      </label>
-      <label>
-          <input type="radio" name="degree" id="bothyrs"> both
-      </label>
-  </form>
-  <h4>School Type</h4>
-  <form>
-      <label>
-          <input type="radio" name="type" id="public"> Public
-      </label>
-      <label>
-          <input type="radio" name="type" id="private"> Private
-      </label>
-      <label>
-          <input type="radio" name="type" id="bothtypes"> both
-      </label>
-  </form>
-  <h4>Tuition Type</h4>
-  <form>
-      <label>
-          <input type="radio" name="tuition" id="instate"> in-state
-      </label>
-      <label>
-          <input type="radio" name="tuition" id="outofstate"> out of state
-      </label>
-  </form>
-</div>
+        <!-- <div class="folium-map" id="map_inner"></div> -->
 
-    </body>
+
+        <div id="sidebar">
+        <h4>Degree Length</h4>
+        <form>
+            <label>
+                <input type="radio" name="degree" id="4yrs" checked> 4-years
+            </label>
+            <label>
+                <input type="radio" name="degree" id="2yrs"> 2-years
+            </label>
+            <label>
+                <input type="radio" name="degree" id="bothyrs"> both
+            </label>
+        </form>
+        <h4>School Type</h4>
+        <form>
+            <label>
+                <input type="radio" name="type" id="public" checked> Public
+            </label>
+            <label>
+                <input type="radio" name="type" id="private"> Private
+            </label>
+            <label>
+                <input type="radio" name="type" id="bothtypes"> both
+            </label>
+        </form>
+        <h4>Tuition Type</h4>
+        <form>
+            <label>
+                <input type="radio" name="tuition" id="instate" checked> in-state
+            </label>
+            <label>
+                <input type="radio" name="tuition" id="outofstate"> out of state
+            </label>
+        </form>
+
+        <br />
+
+        <h4>Legend</h4>
+        <div class="legend">
+            <div class="legend-item">Max</div>
+            <div class="legend-item"></div>
+            <div class="legend-item"></div>
+            <div class="legend-item"></div>
+            <div class="legend-item">Min</div>
+        </div>
+      </div>
+
+
+</body>
 
     <script>
         var degree = 0; // if 0, none selected. 4yrs: 1, 2yrs: 2, both: 3
@@ -154,12 +190,12 @@
         var dot_map;
 
         document.addEventListener("DOMContentLoaded", function () {
-        
+
             // Function to update degree based on radio button selection
             function updateDegree() {
                 var degreeRadios = document.getElementsByName("degree");
                 degree = 0; // Reset to 0
-        
+
                 for (var i = 0; i < degreeRadios.length; i++) {
                     if (degreeRadios[i].checked) {
                         degree = i + 1; // Update based on 1-based index
@@ -169,12 +205,12 @@
 
                 updateHeatmap();
             }
-        
+
             // Function to update stype based on radio button selection
             function updateStype() {
                 var stypeRadios = document.getElementsByName("type");
                 stype = 0; // Reset to 0
-        
+
                 for (var i = 0; i < stypeRadios.length; i++) {
                     if (stypeRadios[i].checked) {
                         stype = i + 1; // Update based on 1-based index
@@ -184,12 +220,12 @@
 
                 updateHeatmap();
             }
-        
+
             // Function to update is_in_state based on radio button selection
             function updateIsInState() {
                 var isInStateRadio = document.getElementById("instate");
                 var isOutOfStateRadio = document.getElementById("outofstate");
-        
+
                 if (isInStateRadio.checked) {
                     is_in_state = true;
                 } else if (isOutOfStateRadio.checked) {
@@ -197,30 +233,30 @@
                 }
                 updateHeatmap();
             }
-        
+
             // Add event listeners to radio buttons
             var degreeRadios = document.getElementsByName("degree");
             var stypeRadios = document.getElementsByName("type");
             var isInStateRadio = document.getElementById("instate");
             var isOutOfStateRadio = document.getElementById("outofstate");
-        
+
             degreeRadios.forEach(function (radio) {
                 radio.addEventListener("change", updateDegree);
             });
-        
+
             stypeRadios.forEach(function (radio) {
                 radio.addEventListener("change", updateStype);
             });
-        
+
             isInStateRadio.addEventListener("change", updateIsInState);
             isOutOfStateRadio.addEventListener("change", updateIsInState);
-        
+
             function toggleButton(button, state) {
                 button.classList.toggle("active", state);
                 updateHeatmap();
         }
     });
-   
+
         // Generate the map
         colleges = `{{ colleges|tojson|safe }}`;
 
@@ -267,12 +303,12 @@
                 } else if (stype === 2) { // private
                     document.getElementById("instate").disabled = true;
                     document.getElementById("outofstate").disabled = true;
-                    if (college["school_type"] === 1){  
+                    if (college["school_type"] === 1){
                         return null;
-                    } 
+                    }
                 } else if (stype === 3){
                     document.getElementById("instate").disabled = false;
-                    document.getElementById("outofstate").disabled = false;  
+                    document.getElementById("outofstate").disabled = false;
                 }
 
                 if (degree === 1 || degree === 0) { // 4 yrs
@@ -334,7 +370,7 @@
                 });
 
                 const color = getColorForSegment(i);
-                
+
                 window[`heat_map${i + 1}`] = L.heatLayer(
                     filteredDataForSegment.map((entry) => {
                         return [entry[0], entry[1]];
