--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,36 +16,12 @@
                 margin: 0;
                 padding: 0;
             }
-        </style>
-        <style>
             #map {
                 position: absolute;
                 top: 0;
                 bottom: 0;
                 right: 0;
                 left: 0;
-            }
-            .legend {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-top: 10px;
-            margin-left: 30px;
-            width: 5vw;
-            height: 40vh;
-            left: 50%;
-            padding: 5px;
-            background: linear-gradient(to top, green, yellow, orange, red, purple);
-            text-align: center;
-            }
-
-            .legend-item {
-            flex: 1;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             }
         </style>
 
@@ -95,18 +71,7 @@
                 margin: 0;
                 overflow: hidden;
             }
-            #sidebar {
-                position: fixed;
-                top: 0;
-                left:0;
-                width: 240px;
-                height: 100vh;
-                background-color: #242424;
-                padding: 20px;
-                bottom: 0%;
-                box-sizing: border-box;
-                float: left; /* Float the sidebar to the left */
-            }
+            
             #map-container {
                 position: absolute;
                 top: 0;
@@ -114,22 +79,6 @@
                 width: 100%;
                 height: 100%;
                 display: flex;
-            }
-            input[type="radio"] {
-                margin-bottom: 10px;
-            }
-            label {
-                display: block;
-                margin-bottom: 8px;
-            }
-
-            h4{
-                color:#ffffff;
-                font-size: 18px;
-                border-bottom: 1px solid #ffffff;
-            }
-            #RadBtn{
-                color:#ffffff;   
             }
 
             .folium-map {
@@ -192,11 +141,11 @@
 
         <h4>Legend for Tuition</h4>
         <div class="legend">
-            <div class="legend-item">Max</div>
+            <div class="legend-item"><b>Max</b></div>
             <div class="legend-item"></div>
             <div class="legend-item"></div>
             <div class="legend-item"></div>
-            <div class="legend-item">Min</div>
+            <div class="legend-item"><b>Min</b></div>
         </div>
       </div>
 
