--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -21,20 +21,33 @@ h4 {
 }
 
 input[type="radio"] {
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    border: 1px solid #fff;
+    padding: 0.5em;
+    -webkit-appearance: none;
 }
+input[type="radio"]:checked {
+    background: url(data:image/gif;base64,R0lGODlhAQABAPAAAP///////yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==)
+        no-repeat center center;
+    background-size: 9px 9px;
+}
+input[type="radio"]:focus {
+    outline-color: transparent;
+}
+
 label {
     display: block;
     margin-bottom: 8px;
+    margin-left: 8px;
 }
 .legend {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-left: 30px;
-    width: 5vw;
+    width: 20px;
     height: 40vh;
     left: 50%;
     padding: 5px;
