--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -11,10 +11,18 @@
     float: left; /* Float the sidebar to the left */
 }
 
+h3 {
+    color: #ffffff;
+    font-size: 15px;
+    border-bottom: 1px solid #878686;
+    text-align: center;
+}
+
 h4 {
+    text-align: center;
     color: #ffffff;
     font-size: 18px;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid hsl(0, 0%, 60%);
 }
 #RadBtn {
     color: #ffffff;
@@ -45,14 +53,19 @@ label {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     margin-top: 15px;
-    margin-left: 30px;
+    margin-left: 90px;
     width: 20px;
     height: 40vh;
     left: 50%;
     padding: 5px;
     background: linear-gradient(to top, green, yellow, orange, red, purple);
     text-align: center;
+}
+#legendbar {
+    justify-content: center;
+    align-items: center;
 }
 
 .legend-item {
@@ -62,6 +75,6 @@ label {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
     -webkit-text-stroke: 0.2px white;
-    text-shadow: 0 0 3px white;
 }
