--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -103,6 +103,8 @@
 
 
         <div id="sidebar">
+
+
         <h4>Degree Length</h4>
         <form id="RadBtn">
             <label>
@@ -133,14 +135,17 @@
                 <input type="radio" name="tuition" id="instate" checked> in-state
             </label>
             <label>
-                <input type="radio" name="tuition" id="outofstate"> out of state
+                <input type="radio" name="tuition" id="outofstate"> out-of-state
             </label>
         </form>
 
         <br />
 
         <h4>Legend for Tuition</h4>
-        <div class="legend">
+        <h3 style="color: white; margin-left: 5px; margin-right: 5px; margin-top: -2px;">
+           Min: $<span id="minValue"></span> &ensp;&ensp;&ensp;Max: $<span id="maxValue"></span>
+        </h3>
+        <div class="legend" id="legendbar">
             <div class="legend-item"><b>Max</b></div>
             <div class="legend-item"></div>
             <div class="legend-item"></div>
@@ -232,6 +237,20 @@
         colleges = `{{ colleges|tojson|safe }}`;
 
         var colleges = JSON.parse(colleges);
+
+        var maxValue = Math.max.apply(
+            Math,
+            colleges.map(function (o) {
+                return o.tuition_out_of_state;
+            })
+        );
+        var minValue = Math.min.apply(
+            Math,
+            colleges.map(function (o) {
+                return o.tuition_in_state;
+            })
+        );
+
 
         var map_inner = L.map("map_inner", {
             center: [37.7749, -95.4194],
@@ -333,10 +352,12 @@
             // Create heatmap layers for each segment
             const colors = ["green", "yellow", "orange", "red", "purple", "black"];
             const segmentRanges = [0, 10000, 25000, 40000, 55000, 999999]; // Adjust these ranges based on your data
+        
+
 
             for (let i = 0; i < 5; i++) {
-                const minRange = segmentRanges[i];
-                const maxRange = segmentRanges[i + 1];
+                var minRange = segmentRanges[i];
+                var maxRange = segmentRanges[i + 1];
 
                 const filteredDataForSegment = filteredData.filter((entry) => {
                     const tuitionValue = entry[2];
@@ -362,6 +383,8 @@
                 map_inner.addLayer(window[`heat_map${i + 1}`]);
             }
 
+            document.getElementById("maxValue").textContent = maxValue;
+            document.getElementById("minValue").textContent = minValue;
 
             // Example function to define color based on segment
             function getColorForSegment(segment) {
